--- a/temp_analysis_bonus_1_starter.ipynb
+++ b/temp_analysis_bonus_1_starter.ipynb
@@ -2,140 +2,238 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Bonus: Temperature Analysis I"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd\r\n",
     "from datetime import datetime as dt"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
    "source": [
-    "# \"tobs\" is \"temperature observations\"\n",
-    "df = pd.read_csv('hawaii_measurements.csv')\n",
+    "# \"tobs\" is \"temperature observations\"\r\n",
+    "df = pd.read_csv('Resources/hawaii_measurements.csv')\r\n",
     "df.head()"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       station        date  prcp  tobs\n",
+       "0  USC00519397  2010-01-01  0.08    65\n",
+       "1  USC00519397  2010-01-02  0.00    63\n",
+       "2  USC00519397  2010-01-03  0.00    74\n",
+       "3  USC00519397  2010-01-04  0.00    76\n",
+       "4  USC00519397  2010-01-06   NaN    73"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Convert the date column format from string to datetime"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Set the date column as the DataFrame index"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Drop the date column"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Compare June and December data across all years "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from scipy import stats"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Filter data for desired months"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Identify the average temperature for June"
-   ]
+    "# Identify the average temperature for June\r\n",
+    "june_temp = session.query(Measurement.station, func.avg(Measurement.tobs)).\\\r\n",
+    "    filter(func.strftime(\"%m\", Measurement.date) == \"06\").\\\r\n",
+    "    group_by(Measurement.station).all()\r\n",
+    "june_temp_df = pd.DataFrame(june_temp, columns = [\"station\", \"tavg_june\"])\r\n",
+    "june_temp_df"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Identify the average temperature for December"
-   ]
+    "# Identify the average temperature for December\r\n",
+    "dec_temp = session.query(Measurement.station, func.avg(Measurement.tobs)).\\\r\n",
+    "    filter(func.strftime(\"%m\", Measurement.date) == \"12\").\\\r\n",
+    "    group_by(Measurement.station).all()\r\n",
+    "dec_temp_df = pd.DataFrame(dec_temp, columns = [\"station\", \"tavg_dec\"])\r\n",
+    "dec_temp_df"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Create collections of temperature data"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Run paired t-test"
-   ]
+    "# Run paired t-test\r\n",
+    "from scipy.stats import ttest_ind\r\n",
+    "stat, p = ttest_ind(june_temp_df[\"tavg_june\"], dec_temp_df[\"tavg_dec\"])\r\n",
+    "print(\"t=%.3f, p=%.3f\" % (stat, p))"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Analysis"
-   ]
+   ],
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The difference in the means of Jun vs Dec is statistically significant"
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -147,7 +245,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
+  },
+  "interpreter": {
+   "hash": "352eb0fdbc39df23c3941759226aac7a80e9e8fcb0968112f6f9929c3d7daf2e"
   }
  },
  "nbformat": 4,
